Add stack resource group

--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -1,8 +1,8 @@
-# stacks/shared-alb.yml
+# stacks/dashboards.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
-  tktktk
+  Creates CloudWatch dashboards for resources in the stack
 
 Parameters:
   EnvironmentType: { Type: String }
