--- a/stacks/shared-resource-share.yml
+++ b/stacks/shared-resource-share.yml
@@ -2,7 +2,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
-  tktktk
+  Creates a common resource share
 
 Parameters:
   EnvironmentType: { Type: String }
