Add resource group link to dashboard

--- a/stacks/resource-groups.yml
+++ b/stacks/resource-groups.yml
@@ -22,9 +22,9 @@ Resources:
           ResourceTypeFilters:
             - AWS::AllSupported
           TagFilters:
-            - Key: prx:cloudformation:root-stack-id
+            - Key: prx:cloudformation:root-stack-name
               Values:
-                - !Ref RootStackId
+                - !Ref RootStackName
         Type: TAG_FILTERS_1_0
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -34,3 +34,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Infrastructure }
+
+Outputs:
+  StackResourceGroupName:
+    Value: !Ref StackResourceGroup
