--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1079,6 +1079,27 @@ Resources:
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/provisioned.yml
       TimeoutInMinutes: 40
 
+  ResourceGroupsStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        RootStackName: !GetAtt Constants.RootStackName
+        RootStackId: !GetAtt Constants.RootStackName
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !GetAtt Constants.RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/resource-groups.yml
+      TimeoutInMinutes: 10
+
   DashboardsStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsStaging # TODO
@@ -1105,6 +1126,7 @@ Resources:
         FeederVanityAlbDomain: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
         DovetailVanityAlbDomain: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
         InfrastructureGitCommit: !Ref InfrastructureGitCommit
+        StackResourceGroupName: !GetAtt ResourceGroupsStack.Outputs.StackResourceGroupName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -1114,27 +1136,6 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/dashboards.yml
-      TimeoutInMinutes: 10
-
-  ResourceGroupsStack:
-    Type: AWS::CloudFormation::Stack
-    Condition: IsStaging # TODO
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
-      Parameters:
-        EnvironmentType: !Ref EnvironmentType
-        RootStackName: !GetAtt Constants.RootStackName
-        RootStackId: !GetAtt Constants.RootStackName
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !GetAtt Constants.RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: Common }
-      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/resource-groups.yml
       TimeoutInMinutes: 10
 
 Outputs:
