--- a/stacks/resource-groups.yml
+++ b/stacks/resource-groups.yml
@@ -26,14 +26,14 @@ Resources:
               Values:
                 - !Ref RootStackName
         Type: TAG_FILTERS_1_0
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        # - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        # - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: Infrastructure }
+      # Tags:
+      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+      #   # - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+      #   # - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+      #   - { Key: prx:dev:application, Value: Infrastructure }
 
 Outputs:
   StackResourceGroupName:
