Update root stack outputs

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1158,12 +1158,41 @@ Outputs:
     Description: >-
       The wildcard domain associated with the shared application load balancer
     Value: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
+
   SharedVpcId:
     Condition: IsStaging # TODO
     Description: The resource ID for the shared VPC
     Value: !GetAtt SharedVpcStack.Outputs.VpcId
 
-  # FeederVanityAlbDomain:
-  #   Value: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
-  # DovetailVanityAlbDomain:
-  #   Value: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
+  SharedVpcPublicSubnet1Id:
+    Condition: IsStaging # TODO
+    Description: The resource ID for public subnet 1
+    Value: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
+  SharedVpcPublicSubnet2Id:
+    Condition: IsStaging # TODO
+    Description: The resource ID for public subnet 2
+    Value: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
+  SharedVpcPublicSubnet3Id:
+    Condition: IsStaging # TODO
+    Description: The resource ID for public subnet 3
+    Value: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+
+  SharedVpcPrivateSubnet1Id:
+    Condition: IsStaging # TODO
+    Description: The resource ID for private subnet 1
+    Value: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+  SharedVpcPrivateSubnet2Id:
+    Condition: IsStaging # TODO
+    Description: The resource ID for private subnet 2
+    Value: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+  SharedVpcPrivateSubnet3Id:
+    Condition: IsStaging # TODO
+    Description: The resource ID for private subnet 3
+    Value: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+
+  FeederVanityAlbDomain:
+    Condition: IsStaging # TODO
+    Value: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
+  DovetailVanityAlbDomain:
+    Condition: IsStaging # TODO
+    Value: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
