Update apps template directory name

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1025,7 +1025,7 @@ Resources:
         FeederEcrImageTag: !Ref FeederEcrImageTag
         FeederSecretsVersion: !Ref FeederSecretsVersion
 
-        TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/provisioned
+        TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/apps
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
         AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
