--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -34,8 +34,8 @@ Parameters:
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
-  UploadSigningEndpointUrl: { Type: String }
-  UploadSigningAccessKeyId: { Type: String }
+  S3SigningEndpointUrl: { Type: String }
+  S3SigningAccessKeyId: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
   SharedMemcachedEndpointPort: { Type: String }
 
@@ -54,7 +54,7 @@ Resources:
           Values:
             - exchange.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "01"]]
   ApiWildcardHostHeaderListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
@@ -66,7 +66,7 @@ Resources:
           Values:
             - api.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "10"]]
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "11"]]
 
   SesSendingUser:
     Type: AWS::IAM::User
@@ -256,9 +256,9 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: AWS_SIGNER_URL
-              Value: !Ref UploadSigningEndpointUrl
+              Value: !Ref S3SigningEndpointUrl
             - Name: AWS_SIGNER_KEY
-              Value: !Ref UploadSigningAccessKeyId
+              Value: !Ref S3SigningAccessKeyId
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -344,9 +344,9 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: AWS_SIGNER_URL
-              Value: !Ref UploadSigningEndpointUrl
+              Value: !Ref S3SigningEndpointUrl
             - Name: AWS_SIGNER_KEY
-              Value: !Ref UploadSigningAccessKeyId
+              Value: !Ref S3SigningAccessKeyId
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -512,9 +512,9 @@ Resources:
             - Name: SAY_WHEN_THREAD
               Value: "true"
             - Name: AWS_SIGNER_URL
-              Value: !Ref UploadSigningEndpointUrl
+              Value: !Ref S3SigningEndpointUrl
             - Name: AWS_SIGNER_KEY
-              Value: !Ref UploadSigningAccessKeyId
+              Value: !Ref S3SigningAccessKeyId
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
