--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -43,8 +43,8 @@ Parameters:
   VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
-  UploadSigningEndpointUrl: { Type: String }
-  UploadSigningAccessKeyId: { Type: String }
+  S3SigningEndpointUrl: { Type: String }
+  S3SigningAccessKeyId: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
   SharedMemcachedEndpointPort: { Type: String }
   EchoServiceToken: { Type: String }
@@ -221,9 +221,9 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: SIGNER_URL
-              Value: !Ref UploadSigningEndpointUrl
+              Value: !Ref S3SigningEndpointUrl
             - Name: SIGNER_ACCESS_KEY
-              Value: !Ref UploadSigningAccessKeyId
+              Value: !Ref S3SigningAccessKeyId
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -529,9 +529,9 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: SIGNER_URL
-              Value: !Ref UploadSigningEndpointUrl
+              Value: !Ref S3SigningEndpointUrl
             - Name: SIGNER_ACCESS_KEY
-              Value: !Ref UploadSigningAccessKeyId
+              Value: !Ref S3SigningAccessKeyId
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
