--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -241,6 +241,8 @@ Resources:
       RootStackId: !Ref AWS::StackId
       SourceBucketName:
         Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
+      DeploymentPackageBucketName:
+        Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
       SecretsBaseRegion:
         Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
       CloudFormationNotificationArn:
@@ -973,6 +975,8 @@ Resources:
         IframelySecretsVersion: !Ref IframelySecretsVersion
         IframelySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Iframely, prefix]
 
+        S3SigningLambdaCodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
+
         StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
         StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
         StyleguideSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Styleguide, prefix]
@@ -994,9 +998,6 @@ Resources:
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
-        UploadSigningUserName: !GetAtt ServerlessRootStack.Outputs.UploadSigningUserName
-        UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
-        UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
@@ -1010,6 +1011,7 @@ Resources:
         EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
         KmsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KmsEndpointAccessSecurityGroupId
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
+        DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -1021,7 +1023,7 @@ Resources:
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/apps-100A.yml
       TimeoutInMinutes: 40
 
-  ProvisionedStack:
+  App200AStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsStaging # TODO
     Properties:
@@ -1032,6 +1034,65 @@ Resources:
         PublishSecretsVersion: !Ref PublishSecretsVersion
         PublishSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Publish, prefix]
 
+        ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
+        ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
+        ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
+
+        NetworksEcrImageTag: !Ref NetworksEcrImageTag
+        NetworksSecretsVersion: !Ref NetworksSecretsVersion
+        NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
+
+        TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/apps
+        CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
+        AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
+        AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
+        EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
+        EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
+        VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        VpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
+        VpcIpv6CidrBlocks: !GetAtt SharedVpcStack.Outputs.VpcIpv6CidrBlocks
+        SecretsBase: !GetAtt Constants.SecretsBaseRegion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        RootStackName: !GetAtt Constants.RootStackName
+        RootStackId: !GetAtt Constants.RootStackId
+        VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
+        VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
+        VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+        VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+        VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointPort
+        AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
+        EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
+        EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
+        KmsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KmsEndpointAccessSecurityGroupId
+        SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
+        UploadSigningUserName: !GetAtt App100AStack.Outputs.S3SigningUserName
+        UploadSigningEndpointUrl: !GetAtt App100AStack.Outputs.S3SigningEndpointUrl
+        UploadSigningAccessKeyId: !GetAtt App100AStack.Outputs.S3SigningAccessKeyId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !GetAtt Constants.RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/apps-200A.yml
+      TimeoutInMinutes: 40
+
+  ProvisionedStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
+    Properties:
+      NotificationARNs:
+        - !GetAtt Constants.CloudFormationNotificationArn
+      Parameters:
         MetricsEcrImageTag: !Ref MetricsEcrImageTag
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
         MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
@@ -1043,10 +1104,6 @@ Resources:
         GroveEcrImageTag: !Ref GroveEcrImageTag
         GroveSecretsVersion: !Ref GroveSecretsVersion
         GroveSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Grove, prefix]
-
-        NetworksEcrImageTag: !Ref NetworksEcrImageTag
-        NetworksSecretsVersion: !Ref NetworksSecretsVersion
-        NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
 
         DovetailRouterEcrImageTag: !Ref DovetailRouterEcrImageTag
         DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
@@ -1060,10 +1117,6 @@ Resources:
         RemixEcrImageTag: !Ref RemixEcrImageTag
         RemixSecretsVersion: !Ref RemixSecretsVersion
         RemixSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
-
-        ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
-        ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
-        ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
 
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
@@ -1093,9 +1146,6 @@ Resources:
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
-        UploadSigningUserName: !GetAtt ServerlessRootStack.Outputs.UploadSigningUserName
-        UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
-        UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
@@ -1160,7 +1210,7 @@ Resources:
         SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheName
         CastleRedisCacheName: !GetAtt ProvisionedStack.Outputs.CastleRedisCacheName
         ProvisionedStackName: !GetAtt ProvisionedStack.Outputs.StackName
-        CmsElasticsearchDomainName: !GetAtt ProvisionedStack.Outputs.CmsElasticsearchDomainName
+        CmsElasticsearchDomainName: !GetAtt App100AStack.Outputs.CmsElasticsearchDomainName
         SharedAlbVanityDomain: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
         FeederVanityAlbDomain: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
         DovetailVanityAlbDomain: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
