--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -38,9 +38,28 @@ Parameters:
   S3SigningEndpointUrl: { Type: String }
   S3SigningAccessKeyId: { Type: String }
 
+  AuguryEcrImageTag: { Type: String }
+  AugurySecretsVersion: { Type: String }
+  AugurySharedAlbListenerRulePriorityPrefix: { Type: String }
+
+  CastleEcrImageTag: { Type: String }
+  CastleSecretsVersion: { Type: String }
+  CastleSharedAlbListenerRulePriorityPrefix: { Type: String }
+
   ExchangeEcrImageTag: { Type: String }
   ExchangeSecretsVersion: { Type: String }
   ExchangeSharedAlbListenerRulePriorityPrefix: { Type: String }
+
+  FeederEcrImageTag: { Type: String }
+  FeederSecretsVersion: { Type: String }
+
+  GroveEcrImageTag: { Type: String }
+  GroveSecretsVersion: { Type: String }
+  GroveSharedAlbListenerRulePriorityPrefix: { Type: String }
+
+  MetricsEcrImageTag: { Type: String }
+  MetricsSecretsVersion: { Type: String }
+  MetricsSharedAlbListenerRulePriorityPrefix: { Type: String }
 
   NetworksEcrImageTag: { Type: String }
   NetworksSecretsVersion: { Type: String }
@@ -50,10 +69,88 @@ Parameters:
   PublishSecretsVersion: { Type: String }
   PublishSharedAlbListenerRulePriorityPrefix: { Type: String }
 
+  RemixEcrImageTag: { Type: String }
+  RemixSecretsVersion: { Type: String }
+  RemixSharedAlbListenerRulePriorityPrefix: { Type: String }
+
 Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Resources:
+  AuguryStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref AuguryEcrImageTag
+        SecretsVersion: !Ref AugurySecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref AugurySharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+        EchoServiceToken: !Ref EchoServiceToken
+        VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
+        VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
+        VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Augury }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/augury.yml
+      TimeoutInMinutes: 20
+
+  CastleStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
+        VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
+        VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref CastleEcrImageTag
+        SecretsVersion: !Ref CastleSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref CastleSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+        SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Castle }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/castle.yml
+      TimeoutInMinutes: 40
+
   ExchangeStack:
     Type: AWS::CloudFormation::Stack
     Properties:
@@ -90,6 +187,107 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Exchange }
       TemplateURL: !Sub ${TemplateUrlPrefix}/exchange.yml
+      TimeoutInMinutes: 20
+
+  FeederStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref FeederEcrImageTag
+        SecretsVersion: !Ref FeederSecretsVersion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+        EchoServiceToken: !Ref EchoServiceToken
+        VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
+        VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
+        VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
+        SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Feeder }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/feeder.yml
+      TimeoutInMinutes: 20
+
+  GroveStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref GroveEcrImageTag
+        SecretsVersion: !Ref GroveSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref GroveSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Grove }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/grove.yml
+      TimeoutInMinutes: 20
+
+  MetricsStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref MetricsEcrImageTag
+        SecretsVersion: !Ref MetricsSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref MetricsSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Metrics }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/metrics.yml
       TimeoutInMinutes: 20
 
   NetworksStack:
@@ -170,6 +368,38 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Publish }
       TemplateURL: !Sub ${TemplateUrlPrefix}/publish.yml
+      TimeoutInMinutes: 20
+
+  RemixStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref RemixEcrImageTag
+        SecretsVersion: !Ref RemixSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref RemixSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Remix }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/remix.yml
       TimeoutInMinutes: 20
 
 Outputs:
